[package]
name = "cargo-toolchain"
version = "0.1.0"
authors = ["Ian Fox <iansfox@pm.me>"]
edition = "2018"
description = "Utility to get information on active rustup toolchains"
readme = "README.md"
repository = "https://github.com/ian-fox/cargo-toolchain"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "toolchain", "rustup"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"